@@ -1,8 +1,8 @@
 AUX bug_x86_64.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
-DIST epson-inkjet-printer-escpr2-1.1.32.tar.gz 4025795 BLAKE2B 0f39db6e08b44d8388601f2c0035a32661e15382149ea762ded733bf96cea9b9409a0796c0c6528c8324563baf6f38db4d65dbf73b9a89ca478cdd670949e8c3 SHA512 2fed7a5a74bbeda9f19eb2f326549d2a9facafa6b46727809a5f4a01031f94d6b8ccf4d29a55cb536a78d4c857282ed910c8890437426ef7cc3f1e80b78a7b7a
 DIST epson-inkjet-printer-escpr2-1.1.33.tar.gz 4050097 BLAKE2B 989ba57516d78e5fe1861d9e455e9ff28061e92f7944ae22cbf9f1c5de92aecc849910568e6f4c67f3a4916b2fe3c3a1f3d23feea3de8d9a22399805c00b66ae SHA512 fa14fbf4650a9dcfb89beae5511f2b66e0c87847834c283720e03e4961de7fb2e6d9d8159cacb8cc428dbeddc9e90a97aaedc3f68306978227500d2e24a5da08
 DIST epson-inkjet-printer-escpr2-1.1.34.tar.gz 4098032 BLAKE2B 70d5249a473e1bb4478663d36faaf06deb311491016e1c61f342b6be35fa5fbd0a2da14e3351c32c28aa4be45b28d3c06ec5e1ff142c2a74e74c54e53a6df544 SHA512 6836339d27a5e7946296e27d286f1425d038d03b65428825b77a360c305e171306f979d9dec6e756431e82263792634c5e75d09b969a405e4cec0f1e92455d2b
-EBUILD epson-inkjet-printer-escpr2-1.1.32.ebuild 1319 BLAKE2B 839c5e46082fa15989cf905062a94d7d984daf143808365d75413ab472b6486fa74be88f5a180f71ed8daa7a67f82705bb6ad3d77b093c49262871c16743db39 SHA512 124da5195424914a3bbb2f7ef7cd25ca01932e84ce3463d326eafb515cbb11f0c8a690e4622cb8f632922641b0928e1b2c013a0f8bd9b3238e606d8d30fdd63f
+DIST epson-inkjet-printer-escpr2-1.1.35.tar.gz 4138135 BLAKE2B f3bd8df830652ed94f6e9da567bd12407ee68ba7b5e629fbccc09f5dd592ce05ec3f5a7718cc76adb718aed2f2a58fb500b509967e44377d1d9d23c2994de3bf SHA512 69d95f235288f2079e59e217e2ab61ed407b6d67fdd1f9ba2bff5bc951afe0d41558d2d245ee642d4560e6dd0047f11afb503b32209e9cda4f7dc330f4f03cc4
 EBUILD epson-inkjet-printer-escpr2-1.1.33.ebuild 1319 BLAKE2B c5ed572c7c69e059f20b2fc552095d04a5ae4b170b6418620857b1df61fc3645656a0135d4c393b4a9129696ec8b2b27721e0e796ee104e6d5b24312f02eaf65 SHA512 1fd197682ca028a5392f198e835190ac5b6e12056076b16e2844897dd9df94ea48887a50ac8e72758ebf6c993be820ff104848081eef380458a9403ff319db0e
 EBUILD epson-inkjet-printer-escpr2-1.1.34.ebuild 1319 BLAKE2B 667fc01b2622585d9f15f0d5184f7f9ced68e80946b6705170c41a6799c97805b5fc0ed3f2684197d1147155e15f2770eba2c223204a36d55c6960ec9b60d3d6 SHA512 bbaaaa3b1318b00c65f655c9df751c32669a93f5e5b4ef8c2ad18538b445eed0094dd0c87c307b9c16bf41f3fd5c87180453595d625e9c00ca7345438baed42c
+EBUILD epson-inkjet-printer-escpr2-1.1.35.ebuild 1319 BLAKE2B 1c83ce098607162445e8cf136e3078421cfefc133b51b65e39825ea869fe4a9e8ed1bfbd8e59b51f68b736e18103225197c1149ed6a50adf0a164c3d460f8ccd SHA512 1f2801feb0568ebb4164a48325796ab818b15ed8e474e469e3b251bc187fd766c17a77bafd912c96791f8331b67d3454ecefb17fb552b697b899975d981af492
 MISC metadata.xml 767 BLAKE2B f926930802184524574c0cc524e8a4e519c343041491770cd1ec74c356d2657c3c566948081a816c9e4d2924b4ad5162023336de0b1fe1ed7199106ed1f5dc86 SHA512 5e1183fe70cdf9cd2dac426a594750ee9733e4cbe9caac68ed028539589653bb6c10083397d234c53dbd1875520be1b2edc4078a117891b040975acd7fa840ac
